# openthread

./: CMakeLists.txt  README.md
.github/workflows/: posix.yml
etc/cmake/: options.cmake
examples/apps/cli/: cli_uart.cpp  main.c
examples/apps/ncp/: CMakeLists.txt  ftd_rpc.cmake  main.c  mtd.cmake  mtd_rpc.cmake  ncp.c
script/: cmake-build  test
src/: CMakeLists.txt
src/core/common/: bit_vector.hpp
src/core/config/: openthread-core-default-config.h
src/core/utils/: lookup_table.cpp
src/posix/: CMakeLists.txt  NcpClient.cpp  README.md  ncp_client.cmake
src/posix/platform/: hdlc_interface.cpp  logging.cpp  system.cpp  uart.cpp  uart.hpp
src/rpc/: CMakeLists.txt  common.hpp  ncp_cli.cpp  ncp_cli.hpp  ncp_service.cpp  ncp_service.hpp  rpc_channel_output.hpp  rpc_channeloutput.cpp  rpc_channeloutput.hpp  rpc_client.cpp  rpc_client.hpp  rpc_config.h  rpc_server.cpp  rpc_server.hpp
src/rpc/proto/: ncp.options  ncp.proto
tests/scripts/expect/: _common.exp  cli-rpc.exp
